@@ -35,7 +35,9 @@ public class FloatFieldWithLabel extends TextFieldWithLabel {
     }
 
     public float getFloat() {
-        if(textField.getText().isEmpty() || (textField.getText().length() == 1 && textField.getText().startsWith("-"))) {
+        if(textField.getText().isEmpty()
+                || (textField.getText().length() == 1 &&
+                (textField.getText().startsWith("-") || textField.getText().startsWith(".")))) {
             return 0;
         }
         return Float.parseFloat(textField.getText());
